--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import {ViewTransitions} from 'astro:transitions'
 import BackgroundStars from '../components/BackgroundStars.astro'
+import Header from './Header.astro'
 
 interface Props {
   title?: string
@@ -43,9 +44,10 @@ const siteName = 'BOZZHIK'
     <meta property="twitter:image" content="/seo.png" />
     <ViewTransitions />
   </head>
-  <body class="text-white font-grotesque bg-black">
-    <slot />
+  <body class="text-white bg-black font-grotesque">
+    <Header />
     <BackgroundStars />
+    <slot />
   </body>
 </html>
 
