--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -5,6 +5,5 @@ import Hero from '../components/Hero.astro'
 ---
 
 <Layout page_path="works" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне.">
-  <Header width="w-[55%] xl:w-[65%] lg:w-[95%]" />
-  <Hero width="" textmono_content="I'm Maxim Bozhik, crafting websites and interfaces" />
+  <Hero textmono_content="I'm Maxim Bozhik, crafting websites and interfaces" />
 </Layout>
