--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import {ViewTransitions} from 'astro:transitions'
 import BackgroundStars from '../components/BackgroundStars.astro'
-import Header from './Header.astro'
+import Header from '../components/Header/Header.astro'
 
 interface Props {
   title?: string
@@ -48,21 +48,24 @@ const siteName = 'BOZZHIK'
     <Header />
     <BackgroundStars />
     <slot />
+    <style is:global>
+      @font-face {
+        font-family: 'Sequel Sans';
+        src:
+          url('../fonts/Sequel-Sans-Roman-Head.woff2') format('woff2'),
+          url('../fonts/Sequel-Sans-Roman-Head.woff') format('woff');
+        font-weight: 400;
+        font-style: normal;
+      }
+
+      @font-face {
+        font-family: 'Sequel Sans';
+        src:
+          url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff2') format('woff2'),
+          url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff') format('woff');
+        font-weight: 600;
+        font-style: normal;
+      }
+    </style>
   </body>
 </html>
-
-<style is:global>
-  @font-face {
-    font-family: 'Sequel Sans';
-    src: url('../fonts/Sequel-Sans-Roman-Head.woff2') format('woff2'), url('../fonts/Sequel-Sans-Roman-Head.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: 'Sequel Sans';
-    src: url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff2') format('woff2'), url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-  }
-</style>
