refactor `Hero.astro` + child components

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -1,7 +1,7 @@
 ---
-import ArrowDown from './Hero/ArrowDown.astro'
-import TextMono from './Hero/TextMono.astro'
-import Title from './Hero/Title.astro'
+import ArrowDown from './HeroArrow.astro'
+import Title from './HeroTitle.astro'
+import TextMono from '../UI/TextMono.astro'
 
 interface Props {
   textmono_content: string
