--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Header from '../layouts/Header.astro'
-import Hero from '../components/Hero.astro'
+import Hero from '../components/Hero/Hero.astro'
 ---
 
 <Layout page_path="works" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне.">
