sync project structure with my `astro` project

--- a/src/components/BackgroundStars.astro
+++ b/src/components/BackgroundStars.astro
@@ -4,7 +4,7 @@
 
 <script>
   // Importing StarFieldCanvas from the GitHub repository: https://github.com/tdous/star-field-canvas
-  import {StarFieldCanvas} from '../javascript/star-field-canvas'
+  import {StarFieldCanvas} from '../lib/star-field-canvas'
 
   const config = {
     // followContext: this.canvas,
