--- a/src/components/Hero/HeroArrow.astro
+++ b/src/components/Hero/HeroArrow.astro
@@ -1,4 +1,12 @@
-<a href="#HERO_CONTENT" class="mb-[10vh] flex gap-10 items-center justify-center">
+---
+interface Props {
+  id_link: string
+}
+
+const {id_link} = Astro.props
+---
+
+<a href=`#${id_link}` class="mb-[10vh] flex gap-10 items-center justify-center">
   <svg class="s-10 animate-bounce-custom" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M112 184l144 144 144-144"></path></svg>
 </a>
 
