optimize `Hero` entity

--- a/src/components/Hero/HeroArrow.astro
+++ b/src/components/Hero/HeroArrow.astro
@@ -6,7 +6,7 @@ interface Props {
 const {id_link} = Astro.props
 ---
 
-<a href=`#${id_link}` class="mb-[10vh] flex gap-10 items-center justify-center">
+<a href=`#${id_link}` class="-mt-[8vh] flex gap-10 items-center justify-center">
   <svg class="s-10 animate-bounce-custom" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M112 184l144 144 144-144"></path></svg>
 </a>
 
