--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import ArrowDown from './HeroArrow.astro'
-import Title from './HeroTitle.astro'
+import HeroArrow from './HeroArrow.astro'
+import HeroTitle from './HeroTitle.astro'
 import TextMono from '../UI/TextMono.astro'
 
 interface Props {
@@ -10,11 +10,11 @@ interface Props {
 
 const {textmono_content, id_link} = Astro.props
 
-const screenHeight = '!h-[75svh] h-[75vh] mb-[6.5vh]'
+const screenHeight = '!h-[100svh] h-[100vh]'
 ---
 
 <div class={`w-full inset-0 flex flex-col justify-center mx-auto text-center ${screenHeight}`}>
-  <Title />
-  <TextMono content={textmono_content} classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-7" />
+  <HeroTitle />
+  <TextMono content={textmono_content} classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-6" />
 </div>
-<ArrowDown {id_link} />
+<HeroArrow {id_link} />
