--- a/src/components/Hero/HeroCaption.astro
+++ b/src/components/Hero/HeroCaption.astro
@@ -1,8 +1,8 @@
 ---
-import TextMono from './TextMono.astro'
+import TextMono from '../UI/TextMono.astro'
 ---
 
-<div class="flex items-center justify-center gap-3">
+<div class="flex items-center justify-center mb-5 gap-3">
   <div class="rounded-full w-7 h-7 bg-[#2A2A2A]">
     <div class="s-full bg-white border-[5px] rounded-full border-[#2A2A2A] animate-pulse"></div>
   </div>
