--- a/src/components/Index/ProjectsCards.astro
+++ b/src/components/Index/ProjectsCards.astro
@@ -8,7 +8,7 @@ const data = await getCollection('projects')
   {
     data.map((i) => (
       <>
-        <a href="#" class="flex flex-col items-center rounded-[35px] sm:rounded-[20px] overflow-hidden border-[1px] border-custom-gray-1 border-b-0">
+        <a href={i.data.link} target={i.data.external_target ? '_blank' : '_self'} class="flex flex-col items-center rounded-[35px] sm:rounded-[20px] overflow-hidden border-[1px] border-custom-gray-1 border-b-0">
           <img class="object-cover object-top w-full h-auto" src={i.data.image} alt={i.data.title} />
           <div class="flex flex-col justify-center items-center max-w-[540px] pt-4 px-8 pb-12 mt-auto">
             <h4 class="font-medium text-2xl text-custom-light-1 mb-4">{i.data.title}</h4>
