--- a/src/components/Hero/HeroTitle.astro
+++ b/src/components/Hero/HeroTitle.astro
@@ -1,3 +1,11 @@
-<h1 class="text-[162px] -mt-7 lg:-mt-0 xl:text-[125px] lg:text-[16vw] leading-[87.5%] font-semibold">
+---
+interface Props {
+  text_classes?: string
+}
+
+const {text_classes} = Astro.props
+---
+
+<h1 class={`text-[162px] -mt-7 lg:-mt-0 xl:text-[125px] lg:text-[16vw] leading-[87.5%] font-semibold ${text_classes}`}>
   FRONTEND <br /> DEVELOPER
 </h1>
