rename `/projects` → `/portfolio`

--- a/src/components/Index/ProjectsCards.astro
+++ b/src/components/Index/ProjectsCards.astro
@@ -1,7 +1,7 @@
 ---
 import {getCollection} from 'astro:content'
 
-const data = await getCollection('projects')
+const data = await getCollection('portfolio')
 ---
 
 <div id="PROJECTS_CARDS" class="grid grid-cols-2 sm:grid-cols-1 gap-10 w-[80%] sm:w-[90%] mx-auto mb-32 pt-[13vh]">
