--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/Hero/Hero.astro'
+import WorksCards from '../components/Works/WorksCards.astro'
 ---
 
 <Layout page_path="works" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне.">
   <Hero classes="" text_classes="mt-[33.8vh]" arrow_exist={false} id_link="WORKS_CARDS" textmono_content="I'm Maxim Bozhik, crafting websites and interfaces" />
+  <WorksCards />
 </Layout>
