--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,6 @@ import Hero from '../components/Hero/Hero.astro'
 import ProjectsCards from '../components/Index/ProjectsCards.astro'
 ---
 
-<Layout description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне.">
-  <Hero classes="!h-[100svh] h-[100vh]" arrow_exist={true} id_link="PROJECTS_CARDS" textmono_content="I'm Maxim Bozhik, HSE design and programming student" />
-  <ProjectsCards />
-</Layout>
+<Layout description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне." />
+<Hero classes="!h-[100svh] h-[100vh]" arrow_exist={true} id_link="PROJECTS_CARDS" textmono_content="I'm Maxim Bozhik, HSE design and programming student" />
+<ProjectsCards />
