--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -9,12 +9,12 @@ interface Props {
   id_link: string
 }
 
-const {textmono_content, id_link, arrow_exist} = Astro.props
+const {textmono_content, id_link, arrow_exist} = Astro.props as Props
 const classes = '!h-[100svh] h-[100vh]'
 ---
 
-<div class={`w-full inset-0 flex flex-col justify-center mx-auto text-center ${classes}`}>
+<section data-section="HERO" class="w-full inset-0 flex flex-col justify-center mx-auto text-center" class:list={classes}>
   <HeroTitle />
   <TextMono content={textmono_content} classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-6" />
-</div>
+</section>
 {arrow_exist ? <HeroArrow {id_link} /> : ''}
