--- a/src/components/UI/TextMono.astro
+++ b/src/components/UI/TextMono.astro
@@ -4,8 +4,7 @@ interface Props {
   classes: string
 }
 
-const {content} = Astro.props
-const {classes} = Astro.props
+const {content, classes} = Astro.props
 ---
 
-<div class=`text-2xl xl:text-xl lg:text-sm lg:leading-[1.15] uppercase font-normal font-monospaced ${classes}`>{content}</div>
+<p class="text-2xl xl:text-xl lg:text-sm lg:leading-[1.15] uppercase font-normal font-monospaced" class:list={classes} set:html={content} />
