--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -2,8 +2,19 @@
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/Hero/Hero.astro'
 import WorksCards from '../components/Works/WorksCards.astro'
+
+const pageData = {
+  page_path: 'works',
+  description: 'Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне.',
+  hero: {
+    textmono: "I'm Maxim Bozhik, crafting websites and interfaces",
+    id_link: 'WORKS_CARDS',
+    arrow_exist: false,
+  },
+}
 ---
 
-<Layout page_path="works" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне." />
-<Hero arrow_exist={false} id_link="WORKS_CARDS" textmono_content="I'm Maxim Bozhik, crafting websites and interfaces" />
-<WorksCards />
+<Layout page_path={pageData.page_path} description={pageData.description}>
+  <Hero textmono_content={pageData.hero.textmono} id_link={pageData.hero.id_link} arrow_exist={pageData.hero.arrow_exist} />
+  <WorksCards />
+</Layout>
