--- a/src/components/Works/WorksCards.astro
+++ b/src/components/Works/WorksCards.astro
@@ -14,8 +14,8 @@ const cardPositions = {
 }
 ---
 
-<section data-section="WORKS" class="w-[80%] sm:w-[90%] mx-auto">
-  <div class="flex flex-col gap-10 pt-[13vh] mb-32 -mt-[32.5vh]">
+<section data-section="WORKS" class="w-[60%] xl:w-[65%] lg:w-[95%] mx-auto">
+  <div class="ml-5 flex flex-col gap-10 pt-[13vh] mb-32 -mt-[32.5vh]">
     {
       data
         .filter((i) => i.data.type === 'work')
