--- a/src/components/Header/HeaderButton.astro
+++ b/src/components/Header/HeaderButton.astro
@@ -3,15 +3,17 @@ interface Props {
   icon: string
   position: string
   size: string
+  href?: string
+  blank?: string
 }
 
-const {icon, position, size} = Astro.props as Props
+const {icon, position, size, href, blank} = Astro.props as Props
 ---
 
-<div class=`relative z-10 inline-flex ${position}`>
+<a {href} target={blank} class="relative z-10 inline-flex" class:list={position}>
   <div class="block overflow-hidden transition border-[4px] duration-200 border-transparent rounded-full aspect-square s-[70px] sm:s-[60px] hover:ring-[2px] hover:ring-custom-gray-2">
-    <div class="s-full group flex overflow-hidden justify-center items-center bg-custom-dark-1">
+    <div class="flex items-center justify-center overflow-hidden s-full group bg-custom-dark-1">
       <img class=`group-hover:animate-pulse object-cover ${size}` src={icon} />
     </div>
   </div>
-</div>
+</a>
