--- a/src/layouts/Fonts.astro
+++ b/src/layouts/Fonts.astro
@@ -1,18 +1,27 @@
 <style>
   @font-face {
-    font-family: 'Sequel Sans';
+    font-family: 'Shapiro';
     src:
-      url('../fonts/Sequel-Sans-Roman-Head.woff2') format('woff2'),
-      url('../fonts/Sequel-Sans-Roman-Head.woff') format('woff');
+      url('../../fonts/Shapiro-45-Welter-Text.woff2') format('woff2'),
+      url('../../fonts/Shapiro-45-Welter-Text.woff') format('woff');
     font-weight: 400;
     font-style: normal;
   }
 
   @font-face {
-    font-family: 'Sequel Sans';
+    font-family: 'Shapiro';
     src:
-      url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff2') format('woff2'),
-      url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff') format('woff');
+      url('../../fonts/Shapiro-55-Middle-Text.woff2') format('woff2'),
+      url('../../fonts/Shapiro-55-Middle-Text.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Shapiro';
+    src:
+      url('../../fonts/Shapiro-65-Light-Heavy.woff2') format('woff2'),
+      url('../../fonts/Shapiro-65-Light-Heavy.woff') format('woff');
     font-weight: 600;
     font-style: normal;
   }
