--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -2,6 +2,7 @@
 import HeroArrow from './HeroArrow.astro'
 import HeroTitle from './HeroTitle.astro'
 import TextMono from '../UI/TextMono.astro'
+import HeroCaption from './HeroCaption.astro'
 
 interface Props {
   textmono_content: string
@@ -15,6 +16,6 @@ const classes = '!h-[100svh] h-[100vh]'
 
 <section data-section="HERO" class="w-full inset-0 flex flex-col justify-center mx-auto text-center" class:list={classes}>
   <HeroTitle />
-  <TextMono content={textmono_content} classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-6" />
+  <TextMono transition="hero_text" content={textmono_content} classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-6" />
 </section>
 {arrow_exist ? <HeroArrow {id_link} /> : ''}
