--- a/src/components/Hero/HeroTitle.astro
+++ b/src/components/Hero/HeroTitle.astro
@@ -1,3 +1,3 @@
-<h1 class="text-[162px] tracking-tighter -mt-7 lg:-mt-0 xl:text-[125px] lg:text-[16vw] leading-[87.5%] font-semibold">
+<h1 transition:name="hero_title" class="text-[162px] tracking-tighter -mt-7 lg:-mt-0 xl:text-[125px] lg:text-[16vw] leading-[87.5%] font-semibold">
   FRONTEND <br /> DEVELOPER
 </h1>
