refactor project `cards`

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,5 +50,10 @@ const siteName = 'BOZZHIK'
     <BackgroundStars />
     <slot />
     <Fonts />
+    <style is:global>
+      [data-card] {
+        background: linear-gradient(125deg, rgba(157, 157, 158, 0.1) 29%, rgba(17, 18, 27, 0) 100%);
+      }
+    </style>
   </body>
 </html>
