--- a/src/components/works/WorksCards.astro
+++ b/src/components/works/WorksCards.astro
@@ -3,13 +3,15 @@ import {getCollection} from 'astro:content'
 
 const data = await getCollection('portfolio')
 
-const cardPositions = {
+import {cardsStyle} from '../index/ProjectsCards.astro'
+
+const cardsPositioning = {
   TUTEA: 1,
   MARAKU: 2,
   'GRAPHITE HOUSE': 3,
-  INFRASTOP: 4,
-  RESTKERAMIKA: 5,
-  'Dr. Spiller': 6,
+  'Dr. Spiller': 4,
+  INFRASTOP: 5,
+  RESTKERAMIKA: 6,
   'Borovsk Delivery': 7,
 }
 ---
@@ -19,21 +21,16 @@ const cardPositions = {
     {
       data
         .filter((i) => i.data.type === 'work')
-        .sort((a, b) => cardPositions[a.data.title] - cardPositions[b.data.title])
+        .sort((a, b) => cardsPositioning[a.data.title] - cardsPositioning[b.data.title])
         .map((i) => (
-          <a href={i.data.link} target={i.data.external_target ? '_blank' : '_self'} class="flex group flex-col h-[40vh] items-center rounded-[35px] sm:rounded-[20px] overflow-hidden border-[1px] border-custom-gray-1 border-b-0">
+          <a data-card="true" href={i.data.link} target={i.data.external_target ? '_blank' : '_self'} class="flex group flex-row h-[50vh] items-center justify-between overflow-hidden duration-500 hover:scale-105" class:list={cardsStyle}>
             <div class="flex flex-col justify-center items-center text-center text-custom-light-1 max-w-[70%] sm:max-w-[100%] sm:p-4 sm:pb-8 pt-4 px-8 pb-14 mt-auto">
               <h4 class="text-3xl font-medium sm:text-2xl group-hover:underline">{i.data.title}</h4>
               {i.data.description && <p class="mt-4 text-sm sm:mt-3">{i.data.description}</p>}
             </div>
+            <img class="object-cover s-20" src={i.data.image} alt={i.data.title} />
           </a>
         ))
     }
   </div>
 </section>
-
-<style>
-  a {
-    background: linear-gradient(127deg, rgba(157, 157, 158, 0.11) 29%, rgba(17, 18, 27, 0) 100%);
-  }
-</style>
