--- a/src/components/index/ProjectsCards.astro
+++ b/src/components/index/ProjectsCards.astro
@@ -18,7 +18,7 @@ export const cardsStyle = 'rounded-[35px] sm:rounded-[20px] border-[1px] border-
         .filter((i) => i.data.type === 'project')
         .sort((a, b) => cardPositions[a.data.title] - cardPositions[b.data.title])
         .map((i) => (
-          <a data-card href={i.data.link} target={i.data.external_target ? '_blank' : '_self'} class="flex flex-col items-center overflow-hidden duration-500 hover:-translate-y-5" class:list={cardsStyle}>
+          <a data-card class="flex flex-col items-center overflow-hidden duration-500 hover:-translate-y-5" class:list={cardsStyle} href={i.data.link} target={i.data.external_target ? '_blank' : '_self'}>
             <img class="object-cover object-top w-full h-auto" src={i.data.image} alt={i.data.title} />
             <div class="flex flex-col justify-center items-center text-center text-custom-light-1 max-w-[70%] sm:max-w-[100%] sm:p-4 sm:pb-8 pt-4 px-8 pb-14 mt-auto">
               <h4 class="text-3xl font-medium sm:text-2xl">{i.data.title}</h4>
