--- a/src/components/works/WorksCards.astro
+++ b/src/components/works/WorksCards.astro
@@ -17,18 +17,20 @@ const cardsPositioning = {
 ---
 
 <section data-section="WORKS" class="w-[60%] xl:w-[65%] lg:w-[95%] mx-auto">
-  <div class="ml-5 flex flex-col gap-10 pt-[13vh] mb-32 -mt-[32.5vh]">
+  <div class="flex flex-col gap-10 pt-[13vh] mb-32 -mt-[32.5vh]">
     {
       data
         .filter((i) => i.data.type === 'work')
         .sort((a, b) => cardsPositioning[a.data.title] - cardsPositioning[b.data.title])
         .map((i) => (
-          <a data-card="true" href={i.data.link} target={i.data.external_target ? '_blank' : '_self'} class="flex group flex-row h-[50vh] items-center justify-between overflow-hidden duration-500 hover:scale-105" class:list={cardsStyle}>
-            <div class="flex flex-col justify-center items-center text-center text-custom-light-1 max-w-[70%] sm:max-w-[100%] sm:p-4 sm:pb-8 pt-4 px-8 pb-14 mt-auto">
-              <h4 class="text-3xl font-medium sm:text-2xl group-hover:underline">{i.data.title}</h4>
-              {i.data.description && <p class="mt-4 text-sm sm:mt-3">{i.data.description}</p>}
+          <a data-card class="relative flex group flex-row h-[31rem] items-center justify-between overflow-hidden duration-500 hover:scale-105" class:list={cardsStyle} href={i.data.link} target={i.data.external_target ? '_blank' : '_self'}>
+            <div class="z-10 w-[35%] flex flex-col justify-center pl-16 text-custom-light-1">
+              <img class="object-cover s-10" src={i.data.icon} alt={`${i.data.title} LOGO`} />
+              <h4 class="mt-5 text-4xl font-medium sm:text-2xl">{i.data.title}</h4>
+              {i.data.description && <p class="mt-1 text-base" set:html={i.data.description} />}
             </div>
-            <img class="object-cover s-20" src={i.data.image} alt={i.data.title} />
+            <img class="z-10 w-[65%] object-cover" src={i.data.image} alt={`${i.data.title} WEBSITE`} />
+            <img class="absolute inset-0 " src="../../../card_default.png" alt={i.data.title} />
           </a>
         ))
     }
