fix `Header` positioning

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -20,8 +20,8 @@ const buttons = {
 }
 ---
 
-<header class="fixed z-[999] w-screen lg:mt-2 mt-9">
-  <div class="grid items-center grid-cols-3 mx-auto w-[55%] xl:w-[65%] lg:w-[95%]">
+<header class="fixed z-[999] w-screen lg:mt-2 mt-9 pr-4">
+  <div class="grid items-center grid-cols-3 mx-auto w-[60%] xl:w-[65%] lg:w-[95%]">
     <Button href={buttons.avatar.href} blank={buttons.avatar.blank} icon={buttons.avatar.icon} position={buttons.avatar.position} size={buttons.avatar.size} />
     <Tabs />
     <Button href={buttons.resume.href} blank={buttons.resume.blank} icon={buttons.resume.icon} position={buttons.resume.position} size={buttons.resume.size} />
