--- a/src/components/works/WorksCards.astro
+++ b/src/components/works/WorksCards.astro
@@ -2,13 +2,16 @@
 import {getCollection} from 'astro:content'
 
 const data = await getCollection('portfolio')
+console.log('🚀 ~ file: WorksCards.astro:5 ~ data:', data)
 
 import {cardsStyle} from '../index/ProjectsCards.astro'
+import NewBadge from '../UI/NewBadge.astro'
+import TechBadge from '../UI/TechBadge.astro'
 
 const cardsPositioning = {
   TUTEA: 1,
-  MARAKU: 2,
-  'GRAPHITE HOUSE': 3,
+  'GRAPHITE HOUSE': 2,
+  MARAKU: 3,
   'Dr. Spiller': 4,
   INFRASTOP: 5,
   RESTKERAMIKA: 6,
@@ -24,11 +27,14 @@ const cardsPositioning = {
         .sort((a, b) => cardsPositioning[a.data.title] - cardsPositioning[b.data.title])
         .map((i) => (
           <a data-card class="relative flex group flex-row h-[31rem] items-center justify-between overflow-hidden duration-500 hover:scale-105" class:list={cardsStyle} href={i.data.link} target={i.data.external_target ? '_blank' : '_self'}>
+            {i.data.new && <NewBadge />}
+
             <div class="z-10 w-[35%] flex flex-col justify-center pl-16 text-custom-light-1">
               <img class="object-cover s-10" src={i.data.icon} alt={`${i.data.title} LOGO`} />
               <h4 class="mt-5 text-4xl font-medium sm:text-2xl">{i.data.title}</h4>
               {i.data.description && <p class="mt-1 text-base" set:html={i.data.description} />}
             </div>
+
             <img class="z-10 w-[65%] object-cover" src={i.data.image} alt={`${i.data.title} WEBSITE`} />
             <img class="absolute inset-0 " src="../../../card_default.png" alt={i.data.title} />
           </a>
