add `Tech` badge for project cards

--- a/src/components/UI/NewBadge.astro
+++ b/src/components/UI/NewBadge.astro
@@ -1,5 +1,5 @@
 ---
-const badgeTitle = 'NEW!'
+const badgeTitle = 'NEW'
 export const badgeStyles = 'p-1 px-[6px] text-sm leading-4 border rounded border-neutral-700 bg-neutral-800 text-neutral-100'
 ---
 
