--- a/src/components/UI/NewBadge.astro
+++ b/src/components/UI/NewBadge.astro
@@ -1,6 +1,12 @@
 ---
+interface Props {
+  classes?: string
+}
+
+const {classes} = Astro.props as Props
+
 const badgeTitle = 'NEW'
 export const badgeStyles = 'p-1 px-[6px] text-sm leading-4 border rounded border-neutral-700 bg-neutral-800 text-neutral-100'
 ---
 
-<div class="absolute pt-2 left-16 top-10 s-fit animate-pulse" class:list={badgeStyles}>{badgeTitle}</div>
+<div class="absolute pt-2 left-16 top-10 s-fit animate-pulse" class:list={[badgeStyles, classes]}>{badgeTitle}</div>
